--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "social-picture-app",
-  "homepage": ".",
+  "homepage": "https://mattkearns.dev/social-picture-app/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
