--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.1",
     "redux-thunk": "^2.3.0",
+    "socket.io-client": "^4.5.2",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
